# tilelang-to-gluon-translator

./: AGENTS_TESTING_SPEC.md  CLAUDE.md  README.md  README_CN.md  TEST_PLAN.md  TEST_STATUS.md  pyproject.toml
docs/: code-review.md  decorator-code-review.md  decorator-design.md  design.md  mapping.md
examples/: elementwise_add_gluon.py  example_elementwise.py  example_matmul.py  matmul_gluon.py  verify_decorator.py
src/: __init__.py  codegen.py  codegen_pointer.py  decorator.py  parser.py  transformer.py  translator.py  verifier.py  version_check.py
tests/: conftest.py  test_accuracy_regression.py  test_codegen.py  test_decorator.py  test_examples_p0.py  test_examples_p1.py  test_examples_p2.py  test_examples_source_p0.py  test_gpu_kernels.py  test_integration.py  test_packaging.py  test_parser.py  test_transformer.py
tilelang_to_gluon_translator/: __init__.py  cli.py  codegen.py  codegen_pointer.py  decorator.py  gluon_compat.py  parser.py  transformer.py  translator.py  version_check.py
